--- a/.github/workflows/k_with_kubectl_apply/gke-deploy-workflow.yml
+++ b/.github/workflows/k_with_kubectl_apply/gke-deploy-workflow.yml
@@ -29,12 +29,12 @@ jobs:
         uses: 'google-github-actions/auth@v1'
         with:
           credentials_json: ${{ secrets.GCP_ACCESS_KEY }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          project_id: cloud-2255
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}          
+          project_id: cloud-2255          
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
