--- a/.github/workflows/k8s-ansible-workflow.yml
+++ b/.github/workflows/k8s-ansible-workflow.yml
@@ -45,10 +45,14 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -out=tfplan
         id: plan
-        # env:
-        #   TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
+        env:
+          TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
+          TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
+          TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
-        # env:
-        #   TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
+        env:
+          TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
+          TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
+          TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
