--- a/.github/workflows/k8s-ansible-workflow.yml
+++ b/.github/workflows/k8s-ansible-workflow.yml
@@ -81,18 +81,16 @@ jobs:
           # Extract the public key from Terraform output
           SSH_PUBLIC_KEY=$(terraform output -raw ansible_ssh_public_key)
           
-          # Use the existing SSH service account credentials
+          # Create a temporary credentials file for the SSH service account
           echo '${{ secrets.SSH_SA_KEY }}' > /tmp/ssh_sa_key.json
           
-          # Temporarily activate the SSH service account
+          # Use the SSH service account to add the key to OS Login
+          # Important: We need to specify the user explicitly here
           gcloud auth activate-service-account ${{ secrets.SSH_SA_EMAIL }} --key-file=/tmp/ssh_sa_key.json
           
-          # Add the SSH key to OS Login (this now uses the SSH service account's credentials)
+          # Add the SSH key to OS Login WITHOUT specifying a different user
           echo "$SSH_PUBLIC_KEY" > /tmp/ansible_ssh.pub
           gcloud compute os-login ssh-keys add --key-file=/tmp/ansible_ssh.pub
-          
-          # Switch back to the original service account
-          gcloud auth activate-service-account --key-file=${{ steps.auth.outputs.credentials_file_path }}
           
           # Clean up sensitive files
           rm /tmp/ssh_sa_key.json /tmp/ansible_ssh.pub
