--- a/.github/workflows/k8s-ansible-workflow.yml
+++ b/.github/workflows/k8s-ansible-workflow.yml
@@ -95,4 +95,5 @@ jobs:
           # Clean up sensitive files
           rm /tmp/ssh_sa_key.json /tmp/ansible_ssh.pub
         env:
+          TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
           TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
