separate workflow for the SSH key setup

--- a/.github/workflows/k8s-ansible-workflow.yml
+++ b/.github/workflows/k8s-ansible-workflow.yml
@@ -11,12 +11,10 @@ jobs:
     permissions:
       contents: 'read'
       id-token: 'write'
-
     defaults:
       run:
         shell: bash
         working-directory: ./TerraformOnGCP/k8s-argocd-monitoring-with-ansible
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -57,47 +55,16 @@ jobs:
           TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
         continue-on-error: true  # Don't fail the workflow if import fails
         
-      # - name: Terraform Plan
-      #   run: terraform plan -out=tfplan
-      #   id: plan
-      #   env:
-      #     TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
-      #     TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
-      #     TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan
+        id: plan
+        env:
+          TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
+          TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
+          TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
 
-      # - name: Terraform Apply
-      #   run: terraform apply -auto-approve
-        # env:
-        #   TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
-        #   TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
-        #   TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
-      
-      # Step for managing SSH keys with the proper service account credentials
-    
-      # with below stepses we will use existing service account with proper permissions
-      # Only handles the OS Login metadata configuration if it doesn't already exist
-      # Uses a temporary activation of the SSH service account just for the key setup step
-      # Keeps the generation of SSH keys in Terraform (in our existing ssh-key-gen.tf)
-      - name: Setup SSH key for OS Login
-        id: 'ssh-setup'
-        if: success()
-        run: |
-          # Extract the public key from Terraform output
-          SSH_PUBLIC_KEY=$(terraform output -raw ansible_ssh_public_key)
-          
-          # Create a temporary credentials file for the SSH service account
-          echo '${{ secrets.SSH_SA_KEY }}' > /tmp/ssh_sa_key.json
-          
-          # Use the SSH service account to add the key to OS Login
-          # Important: We need to specify the user explicitly here
-          gcloud auth activate-service-account ${{ secrets.SSH_SA_EMAIL }} --key-file=/tmp/ssh_sa_key.json
-          
-          # Add the SSH key to OS Login WITHOUT specifying a different user
-          echo "$SSH_PUBLIC_KEY" > /tmp/ansible_ssh.pub
-          gcloud compute os-login ssh-keys add --key-file=/tmp/ansible_ssh.pub
-          
-          # Clean up sensitive files
-          rm /tmp/ssh_sa_key.json /tmp/ansible_ssh.pub
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
         env:
           TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
           TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
