--- a/.github/workflows/k8s-ansible-workflow.yml
+++ b/.github/workflows/k8s-ansible-workflow.yml
@@ -1,8 +1,8 @@
 name: K8s Ansible Workflow
 
 on:
-  push:
-    branches: [ main ]
+  # push:
+  #   branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -55,17 +55,17 @@ jobs:
           TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
         continue-on-error: true  # Don't fail the workflow if import fails
         
-      - name: Terraform Plan
-        run: terraform plan -out=tfplan
-        id: plan
-        env:
-          TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
-          TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
-          TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
+      # - name: Terraform Plan
+      #   run: terraform plan -out=tfplan
+      #   id: plan
+      #   env:
+      #     TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
+      #     TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
+      #     TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
-        env:
-          TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
-          TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
-          TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
+      # - name: Terraform Apply
+      #   run: terraform apply -auto-approve
+      #   env:
+      #     TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
+      #     TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
+      #     TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
