--- a/.github/workflows/ssh-key-workflow.yml
+++ b/.github/workflows/ssh-key-workflow.yml
@@ -67,53 +67,25 @@ jobs:
         if: ${{ env.ACTION == 'setup' }}
         id: 'ssh-setup'
         run: |
-          # Extract the public key from Terraform output
-          SSH_PUBLIC_KEY=$(terraform output -raw ansible_ssh_public_key)
-          
-          # Create a temporary credentials file for the SSH service account
-          echo '${{ secrets.SSH_SA_KEY }}' > /tmp/ssh_sa_key.json
-          
-          # Use the SSH service account to add the key to OS Login
-          gcloud auth activate-service-account ${{ secrets.SSH_SA_EMAIL }} --key-file=/tmp/ssh_sa_key.json
-          
-          # Add the SSH key to OS Login
-          echo "$SSH_PUBLIC_KEY" > /tmp/ansible_ssh.pub
-          gcloud compute os-login ssh-keys add --key-file=/tmp/ansible_ssh.pub
-          
-          # List the SSH keys to verify
-          echo "Verifying SSH keys..."
-          gcloud compute os-login ssh-keys list
-          
-          # Clean up sensitive files
-          rm /tmp/ssh_sa_key.json /tmp/ansible_ssh.pub
-
-      - name: Remove SSH key from OS Login
-        if: ${{ env.ACTION == 'remove' }}
-        run: |
-          # Create a temporary credentials file for the SSH service account
-          echo '${{ secrets.SSH_SA_KEY }}' > /tmp/ssh_sa_key.json
-          
-          # Use the SSH service account
-          gcloud auth activate-service-account ${{ secrets.SSH_SA_EMAIL }} --key-file=/tmp/ssh_sa_key.json
-          
-          # List current keys
-          echo "Current SSH keys:"
-          KEYS=$(gcloud compute os-login ssh-keys list --format="value(fingerprint)")
-          
-          # Remove all keys
-          if [ -n "$KEYS" ]; then
-            echo "Removing SSH keys..."
-            for KEY in $KEYS; do
-              echo "Removing key: $KEY"
-              gcloud compute os-login ssh-keys remove --key=$KEY
-            done
-          else
-            echo "No SSH keys found to remove."
-          fi
-          
-          # Clean up
-          rm /tmp/ssh_sa_key.json
-        env:
-          TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
-          TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
-          TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
+            # Extract the public key from Terraform output
+            SSH_PUBLIC_KEY=$(terraform output -raw ansible_ssh_public_key)
+            
+            # Create a temporary credentials file for the SSH service account
+            echo '${{ secrets.SSH_SA_KEY }}' > /tmp/ssh_sa_key.json
+            
+            # Clear any previous auth settings
+            gcloud auth revoke --all || true
+            
+            # Use the SSH service account credentials explicitly for this command
+            echo "$SSH_PUBLIC_KEY" > /tmp/ansible_ssh.pub
+            
+            # Run gcloud with explicit credential file, bypassing the active credentials
+            CLOUDSDK_AUTH_CREDENTIAL_FILE_OVERRIDE=/tmp/ssh_sa_key.json \
+            gcloud compute os-login ssh-keys add --key-file=/tmp/ansible_ssh.pub
+            
+            # Verify the keys
+            CLOUDSDK_AUTH_CREDENTIAL_FILE_OVERRIDE=/tmp/ssh_sa_key.json \
+            gcloud compute os-login ssh-keys list
+            
+            # Clean up sensitive files
+            rm /tmp/ssh_sa_key.json /tmp/ansible_ssh.pub
