--- a/.github/workflows/ssh-key-workflow.yml
+++ b/.github/workflows/ssh-key-workflow.yml
@@ -56,7 +56,7 @@ jobs:
           fi
         env:
           TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
-          TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
+          TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
         continue-on-error: true
 
       # Step 3: Apply Terraform resources (Secrets/IAM) using SSH Admin SA
@@ -71,7 +71,7 @@ jobs:
                           -auto-approve
         env:
           TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
-          TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
+          TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
 
       # Step 4: Add SSH Key to OS Login Profile of VM SA using SSH Admin SA
       - name: Setup SSH key in OS Login for VM SA
@@ -107,4 +107,4 @@ jobs:
           rm /tmp/ansible_ssh.pub
         env:
            TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
-           TF_VAR_gcp_sa_email: ${{ secrets.GCP_SA_EMAIL }}
+           TF_VAR_ssh_sa_email: ${{ secrets.SSH_SA_EMAIL }}
