add gcp_sa_email into ssh-key-workflow as well

--- a/.github/workflows/ssh-key-workflow.yml
+++ b/.github/workflows/ssh-key-workflow.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
+        with:
+          install_components: beta
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
